--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@headlessui/react": "^1.7.14",
     "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
