--- a/manifest.json
+++ b/manifest.json
@@ -8,18 +8,24 @@
   "display": "standalone",
   "id": "/",
   "scope": "/",
-  "start_url": "/",
+  "start_url": "https://yewdio-react.netlify.app",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/src/assets/icons/icon-192x192.png",
+      "src": "./src/assets/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/src/assets/icons/icon-512x512.png",
+      "src": "./src/assets/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "./src/assets/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
